--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <p>yeajjjjh xd</p>
     <img src="mark.png" alt="">
     <p>dat my buddy mark</p>
-    <p>anyway uhh i have a <a href="recept.html">receipt</a> and its in swedish lol and also also check out <a href="portfolio.css">my portfolio</a></p>
+    <p>anyway uhh i have a <a href="recept.html">receipt</a> and its in swedish lol and also also check out <a href="portfolio.html">my portfolio</a></p>
 </body>
 </html>
